--- a/app/assets/stylesheets/cards.css.scss
+++ b/app/assets/stylesheets/cards.css.scss
@@ -1,3 +1,20 @@
+li.card-show {
+  background: #f6f6f6;
+  color: black;
+  padding: 7px 10px;
+  border-radius: 4px;
+  margin-top: 5px;
+  box-shadow: 1px;
+  -webkit-box-shadow: 0px 1px 0px 0px rgba(92,90,92,1);
+  -moz-box-shadow: 0px 1px 0px 0px rgba(92,90,92,1);
+  box-shadow: 0px 1px 0px 0px rgba(92,90,92,1);
+}
+
+li.card-show:hover {
+  cursor: -moz-grab;
+  cursor: -webkit-grab;
+}
+
 .add-card {
   display: block;
   margin: 2px -3px -3px;
@@ -14,4 +31,11 @@
   position: relative;
   top: 50%;
   transform: translateY(-15%);
+}
+
+.card-place-holder {
+  border-radius: 4px;
+  margin-top: 5px;
+  background: black;
+  opacity: 0.5;
 }
